<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/racquet"
        android:key="pref_key_racquet_details">

        <Preference
            android:key="pref_key_head_size"
            android:title="@string/pref_title_head_size" />

        <Preference
            android:key="pref_key_units"
            android:title="@string/pref_tension_units" />

        <Preference
            android:key="pref_key_string_opening_size"
            android:title="@string/string_opening_size" />

        <Preference
            android:key="pref_key_string_pattern"
            android:title="@string/string_pattern" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/string"
        android:key="pref_key_string_category">

        <Preference
            android:key="pref_key_stringer_style"
            android:title="@string/stringing_type" />

        <SwitchPreference
            android:key="pref_key_string_switch_preference"
            android:title="@string/hybrid_stringing"
            android:summaryOn="@string/hybrid"
            android:summaryOff="@string/single"/>

        <Preference
            android:key="pref_key_string_thickness"
            android:title="@string/thickness" />

        <Preference
            android:key="pref_key_string_type"
            android:title="@string/type" />

        <Preference
            android:key="pref_key_cross_string_thickness"
            android:title="@string/cross_thickness" />

        <Preference
            android:key="pref_key_cross_string_type"
            android:title="@string/cross_type" />

        <Preference
            android:key="pref_key_own_calibration"
            android:title="@string/calibration"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/help"
        android:key="pref_key_help">
        <Preference
            android:key="pref_key_instructions"
            android:title="@string/pref_title_instructions" />
        <Preference
            android:key="pref_key_video_instructions"
            android:title="@string/pref_title_video_instructions">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.youtube.com/watch?v=Lq9xhtLQgXg"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        android:key="pref_key_about">
        <Preference
            android:key="pref_key_share"
            android:title="@string/pref_share"/>
        <Preference
            android:key="pref_key_feedback"
            android:title="@string/pref_title_feedback"/>
        <Preference
            android:key="pref_key_privacy_policy"
            android:title="@string/pref_title_privacy_policy">
            <intent android:action="android.intent.action.VIEW" android:data="https://robustasoft.com/tensionmaster-privacypolicy/"/>
        </Preference>
        <Preference
            android:key="pref_key_app_version"
            android:title="@string/app_version"/>
    </PreferenceCategory>
</PreferenceScreen>